draft of routing and message page

--- a/apps/backoffice-payment-frontend/src/app/app.component.html
+++ b/apps/backoffice-payment-frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="bopr-container">
+    <bopr-header/>
+    <div class="main-content">
+        <router-outlet></router-outlet>
+    </div>
+    <bopr-footer></bopr-footer>
+</div>
