--- a/apps/backoffice-payment-frontend/src/styles.scss
+++ b/apps/backoffice-payment-frontend/src/styles.scss
@@ -1,4 +1,14 @@
+@use '@angular/material' as mat;
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html {
+  color-scheme: light dark;
+  @include mat.theme((
+    color: mat.$cyan-palette,
+    typography: Roboto,
+    density: 0
+  ));
+}
