--- a/apps/backoffice-payment-frontend/src/app/routes/message/message-list/message-list.component.html
+++ b/apps/backoffice-payment-frontend/src/app/routes/message/message-list/message-list.component.html
@@ -1,4 +1,48 @@
-<h1>Messages List TODO</h1>
-@for (message of messageStore.messagesEntities(); track message.id) {
-    <div>{{ `${message.id} - ${message.payload}` }}</div>
-}
+<h1>Messages List</h1>
+
+<div class="message-table-container mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource()" matSort>
+        <!-- Message Id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef> Identifier </th>
+            <td mat-cell *matCellDef="let message"> {{ message.id }} </td>
+        </ng-container>
+
+        <!-- Sender Column -->
+        <ng-container matColumnDef="sender">
+            <th mat-header-cell *matHeaderCellDef> Sender </th>
+            <td mat-cell *matCellDef="let message"> {{ message.sender }} </td>
+        </ng-container>
+
+        <!-- Recipients Column -->
+        <ng-container matColumnDef="recipients">
+            <th mat-header-cell *matHeaderCellDef> Recipients </th>
+            <td mat-cell *matCellDef="let message"> {{ message.recipients }} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let message; columns: displayedColumns;" (click)="onClickMessage(message.id)"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row no-data-row" *matNoDataRow>
+            <td class="mat-cell" colspan="9">No data</td>
+        </tr>
+    </table>
+
+    <!-- TODO Create a component bopr-async-paginator with a Pageable input -->
+    <div class="paginator" >
+        <div class="paginator-size">
+            <label for="size">Messages per page:</label>
+            <select class="select" name="size" [(ngModel)]="messageStore.size" (ngModelChange)="onChangeSize()" aria-label="Select page of messages">
+                @for (sizeOption of ['5', '10', '25', '100']; track $index) {
+                    <option [value]="sizeOption">{{sizeOption}}</option>
+                }
+            </select>
+        </div>
+        <div class="from-to">{{ `${messageStore.fromElementNumber()} - ${messageStore.toElementNumber()} of ${messageStore.totalElements()}`}}</div>
+        <div class="buttons-prev-next">
+            <button mat-icon-button [disabled]="messageStore.isFirstPage()" (click)="onPreviousPage()"><mat-icon>chevron_left</mat-icon></button>
+            <button mat-icon-button [disabled]="messageStore.isLastPage()" (click)="onNextPage()"><mat-icon>chevron_right</mat-icon></button>
+        </div>
+    </div>
+</div>
