--- a/apps/backoffice-payment-frontend/src/styles.scss
+++ b/apps/backoffice-payment-frontend/src/styles.scss
@@ -12,3 +12,10 @@ html {
     density: 0
   ));
 }
+
+:root {
+  @include mat.table-overrides((
+    row-item-outline-color: color-mix(in srgb, var(--mat-sys-primary) 10%, transparent),
+    header-headline-color: color-mix(in srgb, var(--mat-sys-primary) 90%, transparent),
+  ));
+}
