--- a/apps/backoffice-payment-frontend/src/app/routes/message/message-list/message-list.component.html
+++ b/apps/backoffice-payment-frontend/src/app/routes/message/message-list/message-list.component.html
@@ -21,7 +21,7 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let message; columns: displayedColumns;" (click)="onClickMessage(message.id)"></tr>
+        <tr mat-row *matRowDef="let message; columns: displayedColumns;" (click)="onClickMessage(message)"></tr>
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row no-data-row" *matNoDataRow>
