add scrolling bar on main-content

--- a/apps/backoffice-payment-frontend/src/app/app.component.scss
+++ b/apps/backoffice-payment-frontend/src/app/app.component.scss
@@ -16,6 +16,8 @@ bopr-header {
 .main-content {
     grid-area: content;
     padding: 4px 16px;
+    overflow-y: auto; 
+    height: 100%; 
 }
 
 bopr-footer {
