--- a/apps/backoffice-payment-frontend/src/app/app.component.scss
+++ b/apps/backoffice-payment-frontend/src/app/app.component.scss
@@ -23,3 +23,13 @@ bopr-header {
 bopr-footer {
     grid-area: footer;
 }
+
+.progress-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
+    height: 4px;
+    transition: opacity 0.3s ease-in-out;
+}
