--- a/apps/backoffice-payment-frontend/src/app/routes/partner/partner-list/partner-list.component.html
+++ b/apps/backoffice-payment-frontend/src/app/routes/partner/partner-list/partner-list.component.html
@@ -37,11 +37,11 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let partner; columns: displayedColumns;" (click)="onClickPartner(partner)"></tr>
+        <tr mat-row *matRowDef="let partner; columns: displayedColumns;"></tr>
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row no-data-row" *matNoDataRow>
-            <td class="mat-cell" colspan="9">No data</td>
+            <td class="mat-cell" colspan="6">No data</td>
         </tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="10" aria-label="Select page of partner">
