--- a/apps/backoffice-payment-frontend/src/app/routes/partner/partner-list/partner-list.component.html
+++ b/apps/backoffice-payment-frontend/src/app/routes/partner/partner-list/partner-list.component.html
@@ -36,12 +36,23 @@
             <td mat-cell *matCellDef="let partner"> {{ partner.description }} </td>
         </ng-container>
 
+        <!-- Description Column -->
+        <ng-container matColumnDef="deleteAction">
+            <th mat-header-cell *matHeaderCellDef> Delete action </th>
+            <td mat-cell *matCellDef="let partner">
+                <button mat-icon-button aria-label="Ddelete action button" (click)="onDeleteAction(partner)">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let partner; columns: displayedColumns;"></tr>
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row no-data-row" *matNoDataRow>
-            <td class="mat-cell" colspan="6">No data</td>
+            <td class="mat-cell" colspan="7">No data</td>
         </tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="10" aria-label="Select page of partner">
