--- a/apps/backoffice-payment-frontend/src/app/routes/message/message-list/message-list.component.html
+++ b/apps/backoffice-payment-frontend/src/app/routes/message/message-list/message-list.component.html
@@ -5,23 +5,23 @@
         <!-- Message Id Column -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> Identifier </th>
-            <td mat-cell *matCellDef="let message"> {{ message.id }} </td>
+            <td mat-cell *matCellDef="let message" data-testid="cell-message-id"> {{ message.id }} </td>
         </ng-container>
 
         <!-- Sender Column -->
         <ng-container matColumnDef="sender">
             <th mat-header-cell *matHeaderCellDef> Sender </th>
-            <td mat-cell *matCellDef="let message"> {{ message.sender }} </td>
+            <td mat-cell *matCellDef="let message" data-testid="cell-message-sender"> {{ message.sender }} </td>
         </ng-container>
 
         <!-- Recipients Column -->
         <ng-container matColumnDef="recipients">
             <th mat-header-cell *matHeaderCellDef> Recipients </th>
-            <td mat-cell *matCellDef="let message"> {{ message.recipients }} </td>
+            <td mat-cell *matCellDef="let message" data-testid="cell-message-recipients"> {{ message.recipients }} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let message; columns: displayedColumns;" (click)="onClickMessage(message)"></tr>
+        <tr mat-row *matRowDef="let message; columns: displayedColumns;" (click)="onClickMessage(message)" data-testid="row-message"></tr>
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row no-data-row" *matNoDataRow>
